--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,108 @@
-django
-gunicorn
-django-heroku
+alabaster==0.7.12
+appnope==0.1.0
+awscli==1.16.63
+Babel==2.6.0
+backcall==0.1.0
+beautifulsoup4==4.6.3
+bleach==3.0.2
+botocore==1.12.53
+bs4==0.0.1
+cachetools==3.0.0
+certifi==2018.10.15
+chardet==3.0.4
+Click==7.0
+colorama==0.3.9
+coverage==4.5.2
+decorator==4.3.0
+defusedxml==0.5.0
+dj-database-url==0.5.0
+Django==2.1.3
+django-heroku==0.3.1
+docutils==0.14
+entrypoints==0.2.3
+flake8==3.6.0
+forestci==0.3
+google-api-core==1.5.2
+google-auth==1.6.1
+google-auth-oauthlib==0.2.0
+google-cloud-bigquery==1.7.0
+google-cloud-core==0.28.1
+google-resumable-media==0.3.1
+googleapis-common-protos==1.5.5
+gspread==3.1.0
+gunicorn==19.9.0
+httplib2==0.12.0
+idna==2.7
+imagesize==1.1.0
+ipykernel==5.1.0
+ipython==7.1.1
+ipython-genutils==0.2.0
+ipywidgets==7.4.2
+jedi==0.13.1
+Jinja2==2.10
+jmespath==0.9.3
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.3
+jupyter-console==6.0.0
+jupyter-core==4.4.0
+lxml==4.2.5
+MarkupSafe==1.1.0
+mccabe==0.6.1
+mistune==0.8.4
+nbconvert==5.4.0
+nbformat==4.4.0
+nose==1.3.7
+notebook==5.7.2
+numpy==1.15.4
+oauth2client==4.1.3
+oauthlib==2.1.0
+packaging==18.0
+pandas==0.23.4
+pandas-gbq==0.8.0
+pandocfilters==1.4.2
+parso==0.3.1
+patsy==0.5.1
+pexpect==4.6.0
+pickleshare==0.7.5
+plotly==3.4.2
+prometheus-client==0.4.2
+prompt-toolkit==2.0.7
+protobuf==3.6.1
+psycopg2==2.7.6.1
+ptyprocess==0.6.0
+pyasn1==0.4.4
+pyasn1-modules==0.2.2
+pycodestyle==2.4.0
+pyflakes==2.0.0
+Pygments==2.3.0
+pyparsing==2.3.0
+python-dateutil==2.7.5
+python-dotenv==0.9.1
+pytz==2018.7
+PyYAML==3.13
+pyzmq==17.1.2
+qtconsole==4.4.3
+requests==2.20.1
+requests-oauthlib==1.0.0
+retrying==1.3.3
+rsa==3.4.2
+s3transfer==0.1.13
+scikit-learn==0.20.1
+scipy==1.1.0
+Send2Trash==1.5.0
+six==1.11.0
+sklearn==0.0
+snowballstemmer==1.2.1
+Sphinx==1.8.2
+sphinxcontrib-websupport==1.1.0
+statsmodels==0.9.0
+terminado==0.8.1
+testpath==0.4.2
+tornado==5.1.1
+traitlets==4.3.2
+urllib3==1.24.1
+wcwidth==0.1.7
+webencodings==0.5.1
+whitenoise==4.1.2
+widgetsnbextension==3.4.2
