--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Start on Heroku: Python",
-  "description": "A barebones Python app, which can easily be deployed to Heroku.",
+  "name": "CarouHack Car Pricer",
+  "description": "Car Pricing",
   "image": "heroku/python",
-  "repository": "https://github.com/heroku/python-getting-started",
+  "repository": "https://github.com/jaeoheeail/carouhack_car_price",
   "keywords": ["python", "django" ],
   "addons": [ "heroku-postgresql" ],
   "env": {
