--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alabaster==0.7.12
+aniso8601==0.82
 appnope==0.1.0
 awscli==1.16.63
 Babel==2.6.0
@@ -21,6 +22,8 @@ django-heroku==0.3.1
 docutils==0.14
 entrypoints==0.2.3
 flake8==3.6.0
+Flask==0.10.1
+Flask-RESTful==0.2.12
 forestci==0.3
 google-api-core==1.5.2
 google-auth==1.6.1
@@ -38,6 +41,7 @@ ipykernel==5.1.0
 ipython==7.1.1
 ipython-genutils==0.2.0
 ipywidgets==7.4.2
+itsdangerous==0.24
 jedi==0.13.1
 Jinja2==2.10
 jmespath==0.9.3
@@ -76,6 +80,7 @@ pyasn1-modules==0.2.2
 pycodestyle==2.4.0
 pyflakes==2.0.0
 Pygments==2.3.0
+pymongo==3.7.2
 pyparsing==2.3.0
 python-dateutil==2.7.5
 python-dotenv==0.9.1
@@ -104,5 +109,6 @@ traitlets==4.3.2
 urllib3==1.24.1
 wcwidth==0.1.7
 webencodings==0.5.1
+Werkzeug==0.9.6
 whitenoise==4.1.2
 widgetsnbextension==3.4.2
